# static

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  README_zh.md  entrypoint.sh  go.mod  go.sum  main.go
.github/workflows/: publish.yml  test.yml
assets/: bootstrap.min.css.br  bootstrap.min.css.zst
src/: config.rs  error.rs  main.rs  metrics.rs  rate_limit.rs  serve.rs  storage.rs
src/templates/: autoindex.html  error.html
