[package]
name = "static-serve"
version = "0.2.5"
edition = "2024"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"

[dependencies]
TinyUFO = "0.8.0"
aho-corasick = "1.1.4"
axum = "0.8.9"
bytes = "1.11.1"
bytesize = "2.3.1"
envy = "0.4.2"
base64 = "0.22"
http-body = "1.0.1"
httpdate = "1.0"
ipnet = "2.12.0"
humantime = "2.3.0"
mime_guess = "2.0.5"
mimalloc = "0.1.51"
num_cpus = "1.17.0"
opendal = { version = "0.56.0", features = [
    "services-fs",
    "services-ftp",
    "services-gridfs",
    "services-s3",
    "layers-mime-guess",
] }
path-absolutize = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.0"
substring = "1.4.5"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.8", features = [
    "compression-br",
    "compression-gzip",
    "compression-zstd",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time", "json"] }
url = "2.5.8"
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
